Fix picture and alignment

--- a/themes/apollo/source/styl/_partial/base.styl
+++ b/themes/apollo/source/styl/_partial/base.styl
@@ -2,7 +2,7 @@ html
   height: 100%
 
 body
-  padding: 0 4rem
+  padding: 0
   background: #f6f6f6
   margin: 0
   min-height: 100%
@@ -12,9 +12,9 @@ body
   font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif
 
 .wrapper
-  padding: 0.5rem
+  padding: 1rem 2rem
   border-left: 2px solid rgba(66, 185, 131, 0.25)
-
+  max-width: 48rem
 
 ul.nav,
 ul.post-list
