--- a/themes/apollo/source/styl/_partial/header.styl
+++ b/themes/apollo/source/styl/_partial/header.styl
@@ -1,7 +1,6 @@
 header
   overflow: auto
   position: relative
-  left: -60px
   padding-top: 1rem
   margin-bottom: 1rem
 
@@ -10,6 +9,6 @@ header
   align-items: center
 
 .logo .logo-txt
-  margin-left: 3rem
+  padding-left: 1rem
   color: #9a9b84
   font-size: 1rem
